tests/snapshots/raw__examples_in_informal_reference-4.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"continue\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 8,
        },
    ],
)
