tests/snapshots/raw__examples_in_informal_reference-40.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"become\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 6,
        },
    ],
)
