tests/snapshots/raw__examples_in_informal_reference-41.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"box\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 3,
        },
    ],
)
