tests/snapshots/raw__examples_in_informal_reference-42.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"do\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 2,
        },
    ],
)
