tests/snapshots/raw__examples_in_informal_reference-43.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"final\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 5,
        },
    ],
)
