tests/snapshots/raw__examples_in_informal_reference-45.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"override\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 8,
        },
    ],
)
