tests/snapshots/raw__examples_in_informal_reference-46.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"priv\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 4,
        },
    ],
)
