tests/snapshots/raw__examples_in_informal_reference-48.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"unsized\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 7,
        },
    ],
)
